@startuml

title __RESOURCES's Class Diagram__\n

  namespace  {
    namespace b.edu {
      namespace resources {
        class ub.edu.resources.ResourcesFacade {
            {static} - uniqueInstance : ResourcesFacade
            + addNewGrup()
            + addNewPersona()
            + addNewVot()
            + addRelacionGrupPersona()
            + getAllVots()
            {static} + getInstance()
            + getRelacioRutesComarques()
            + initComarques()
            + initGrups()
            + initListOpinions()
            + initRutes()
            + initXarxaPersones()
            + populateTripUB()
            + relacionarRutesComarques()
            - initAllotjaments()
            - initLocalitats()
            - initOpinio()
            - initPerfilsPersones()
            - initReserves()
            - initTramsEtapaRuta()
            - initTramsRuta()
            - initTramsTrackRuta()
            - initVots()
            - relacioPersonesGrups()
        }
      }
    }
  }
  

  namespace  {
    namespace b.edu {
      namespace resources {
        class ub.edu.resources.RessourceFacadePuntdePas {
            {static} - uniqueInstance : RessourceFacadePuntdePas
            + addOpinio()
            + getAllOpinions()
            + getAllPuntdePas()
            + getAlolVots()
            {static} + getInstance()
            + getPuntdePasById()
        }
      }
    }
  }
  

  namespace  {
    namespace b.edu {
      namespace resources {
        class ub.edu.resources.RessourceFacadeRuta {
            {static} - uniqueInstance : RessourceFacadeRuta
            + getAllRutes()
            + getAllTipusVots()
            + getAllVots()
            {static} + getInstance()
            + getRutaByID()
        }
      }
    }
  }
  

  ub.edu.resources.ResourcesFacade o-- ub.edu.resources.service.DataService : dataService
  ub.edu.resources.ResourcesFacade o-- ub.edu.resources.service.AbstractFactoryData : factory
  ub.edu.resources.ResourcesFacade o-- ub.edu.model.ModelFacade : modelFacade
  ub.edu.resources.ResourcesFacade o-- ub.edu.model.ModelFacanaPuntPas : modelFacanaPuntPas
  ub.edu.resources.ResourcesFacade o-- ub.edu.controller.SessionMemory : sessionMemory
  ub.edu.resources.ResourcesFacade o-- ub.edu.model.TripUB : tripUB
  ub.edu.resources.RessourceFacadePuntdePas o-- ub.edu.resources.service.DataService : dataService
  ub.edu.resources.RessourceFacadePuntdePas o-- ub.edu.resources.service.AbstractFactoryData : factory
  ub.edu.resources.RessourceFacadePuntdePas o-- ub.edu.model.TripUB : tripUB
  ub.edu.resources.RessourceFacadeRuta o-- ub.edu.resources.service.DataService : dataService
  ub.edu.resources.RessourceFacadeRuta o-- ub.edu.resources.service.AbstractFactoryData : factory
  ub.edu.resources.RessourceFacadeRuta o-- ub.edu.model.TripUB : tripUB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
